mule-user-guide/v/3.2/domtoxml-transformer.adoc
= DOM to XML Transformers

Mule contains several transformers that convert between a W3C DOM object and its serialized representation. The DomToXml transformer converts DOM objects to XML, the XmlToDom transformer converts XML strings to DOM objects, and the DomToOutputHandler transformer converts from a DOM to an OutputHandler serialization.

These transformers support the link:/documentation-3.2/display/32X/Transformers+Configuration+Reference[standard transformer attributes] plus the following:

[width="99a",cols="99a",grid="none"]
|===
|
xslt: Read http://www.mulesource.org/xslt/mule/schemadoc/2.0/individual-transport-or-module-wiki.xsl error because of: java.io.IOException: Server returned HTTP response code: 401 for URL: http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//individual-transport-or-module-wiki.xsl
|
xslt: Read http://www.mulesource.org/xslt/mule/schemadoc/2.0/individual-transport-or-module-wiki.xsl error because of: java.io.IOException: Server returned HTTP response code: 401 for URL: http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//individual-transport-or-module-wiki.xsl
|
xslt: Read http://www.mulesource.org/xslt/mule/schemadoc/2.0/individual-transport-or-module-wiki.xsl error because of: java.io.IOException: Server returned HTTP response code: 401 for URL: http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//individual-transport-or-module-wiki.xsl
|===

== Example

To use the DOM/XML transformers, you add them to your Mule XML configuration as follows:

[source, xml, linenums]
----
<xm:dom-to-xml-transformer name="DomToXml"/>
<xm:xml-to-dom-transformer name="xmlToDom" returnClass="org.w3c.dom.Document" />
<xm:xml-to-output-handler-transformer name="xmlToOutputHandler" />
----

You can then reference them by name from endpoints:

[source, xml, linenums]
----
<vm:inbound-endpoint name="testEndpoint" path="another.queue" connector-ref="vmConnector1" transformer-refs="DomToXml" />
...
<vm:outbound-endpoint ref="xml-dom-out" transformer-refs="xmlToDom" />
...
----
